[gd_scene load_steps=58 format=3 uid="uid://dg6cy6qsu6237"]

[ext_resource type="Script" uid="uid://ctubsmgdsnddo" path="res://actors/battlers/Ship.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bii2tlio8ltjj" path="res://assets/sprites/atom.png" id="2"]
[ext_resource type="Animation" path="res://assets/animations/Invincible.tres" id="3"]
[ext_resource type="Script" uid="uid://dg3ny04agcjtp" path="res://addons/ECM/Entity.gd" id="4"]
[ext_resource type="Script" uid="uid://bx28gpgdlmtid" path="res://addons/ECM/Component.gd" id="7"]
[ext_resource type="Script" uid="uid://dvsqui64nkn1g" path="res://combat/components/Flowing.gd" id="9"]
[ext_resource type="Script" uid="uid://g1hrqoxo1cv2" path="res://combat/components/Cargo.gd" id="10"]
[ext_resource type="PackedScene" path="res://combat/traits/Target.tscn" id="11"]
[ext_resource type="Script" uid="uid://dq3irg72shdhp" path="res://combat/components/Conqueror.gd" id="12"]
[ext_resource type="Script" uid="uid://cxs28qfg3oq0w" path="res://combat/components/Thrusters.gd" id="13"]
[ext_resource type="Script" uid="uid://cbwfk2klo8fhh" path="res://combat/components/Teleportable.gd" id="14"]
[ext_resource type="PackedScene" uid="uid://dkvmbcd4lbegu" path="res://actors/battlers/DebugShip.tscn" id="15"]
[ext_resource type="PackedScene" uid="uid://t3rjpb70bm4q" path="res://actors/battlers/PlayerInfoOnShip.tscn" id="16"]
[ext_resource type="Script" uid="uid://h386lnjcr5ss" path="res://actors/battlers/TargetDest.gd" id="17"]
[ext_resource type="PackedScene" path="res://combat/traits/Strategic.tscn" id="18"]
[ext_resource type="Texture2D" uid="uid://dih85s8b72e2l" path="res://assets/sprites/weapons/trail_spark.png" id="19"]
[ext_resource type="Texture2D" uid="uid://b5gwcatylq8lk" path="res://assets/sprites/species/drones/ship.png" id="20"]
[ext_resource type="PackedScene" path="res://utils/RisingAudioStreamPlayer2D.tscn" id="21"]
[ext_resource type="PackedScene" path="res://combat/traits/Intro.tscn" id="22"]
[ext_resource type="PackedScene" path="res://combat/traits/Bumper.tscn" id="23"]
[ext_resource type="PackedScene" path="res://combat/traits/Collector.tscn" id="24"]
[ext_resource type="PackedScene" path="res://actors/weapons/Sword.tscn" id="25"]
[ext_resource type="PackedScene" path="res://actors/weapons/Scythe.tscn" id="26"]
[ext_resource type="PackedScene" path="res://actors/weapons/Magnet.tscn" id="27"]
[ext_resource type="PackedScene" path="res://utils/Cargo.tscn" id="28"]
[ext_resource type="PackedScene" uid="uid://bklnkitol1qwq" path="res://utils/AutoTrail.tscn" id="29"]
[ext_resource type="PackedScene" path="res://actors/weapons/shields/Shields.tscn" id="30"]
[ext_resource type="PackedScene" path="res://actors/weapons/Drill.tscn" id="31"]
[ext_resource type="PackedScene" path="res://utils/WeaponSlot.tscn" id="32"]
[ext_resource type="PackedScene" path="res://actors/weapons/Pew.tscn" id="33"]
[ext_resource type="Texture2D" uid="uid://jqegv0xiifs2" path="res://assets/sprites/interface/arrow_tip.png" id="34"]
[ext_resource type="AudioStream" uid="uid://bu272mhv7bhnp" path="res://assets/audio/FX/sfx_coin_double7.wav" id="35"]
[ext_resource type="PackedScene" uid="uid://clbsrjsidxhav" path="res://combat/traits/Tracked.tscn" id="36"]
[ext_resource type="PackedScene" uid="uid://ccf8lnnnpc7br" path="res://actors/battlers/Ammo.tscn" id="37"]
[ext_resource type="Shader" uid="uid://ctwaq21cw4j8y" path="res://assets/shaders/outline.gdshader" id="38"]
[ext_resource type="Animation" path="res://assets/animations/Appearing.tres" id="39"]
[ext_resource type="PackedScene" uid="uid://mjjon1epk4qn" path="res://godot4/effects/Shadow.tscn" id="40"]
[ext_resource type="Texture2D" uid="uid://itev6b25l54t" path="res://assets/sprites/species/trixens/ship2.png" id="41"]
[ext_resource type="PackedScene" path="res://interface/ShootingLine.tscn" id="42"]
[ext_resource type="Texture2D" uid="uid://b45mxffwjy7yv" path="res://assets/shaders/trail.png" id="43"]
[ext_resource type="Script" uid="uid://bpexb6wjfpakj" path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" id="44"]
[ext_resource type="AudioStream" uid="uid://cswvdme3d1wuh" path="res://assets/audio/gameplay/bricks/sfx_wpn_laser7.wav" id="45"]
[ext_resource type="PackedScene" path="res://combat/traits/TimeFreezable.tscn" id="46"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0
bounce = 0.5

[sub_resource type="CircleShape2D" id="2"]
resource_local_to_scene = true
radius = 48.0

[sub_resource type="GDScript" id="11"]
script/source = "extends Marker2D
tool

@export var ship_texture : Texture2D: set = change_texture
const TWEEN_DURATION = 0.3

var position_start = Vector2()

signal stop_invincible
signal completed

@onready var tween = $Tween
@onready var anim = $AnimationPlayer

func change_texture(new_value):
	ship_texture = new_value
	if not is_inside_tree():
		await self.ready
	$Sprite2D.texture = ship_texture
		
func play_disappear():
	anim.play(\"disappear\")
	await anim.animation_finished

func play_idle():
	anim.play(\"idle\")
	await anim.animation_finished

func invincible(offset = 0):
	anim.play(\"invincible\")
	anim.seek(offset)
	await anim.animation_finished
	emit_signal(\"stop_invincible\")
"

[sub_resource type="Animation" id="12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="13"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(3, 3, 3, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ofvoh"]
_data = {
&"RESET": SubResource("12"),
&"appearing": ExtResource("39"),
&"hit": SubResource("13"),
&"invincible": ExtResource("3")
}

[sub_resource type="ShaderMaterial" id="10"]
resource_local_to_scene = true
shader = ExtResource("38")
shader_parameter/color = Color(1, 1, 1, 0)
shader_parameter/width = 12.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="14"]
shader = ExtResource("38")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 14.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CircleShape2D" id="3"]
radius = 48.0

[sub_resource type="CircleShape2D" id="4"]
radius = 700.0

[sub_resource type="CanvasItemMaterial" id="6"]

[sub_resource type="Gradient" id="7"]
colors = PackedColorArray(1, 1, 1, 1, 1, 0.199219, 0, 0)

[sub_resource type="GradientTexture2D" id="8"]
gradient = SubResource("7")

[sub_resource type="ParticleProcessMaterial" id="9"]
emission_shape = 1
emission_sphere_radius = 30.0
spread = 60.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("8")

[node name="Ship" type="RigidBody2D" groups=["Foreground", "Ship", "in_camera", "player_ship", "players"]]
collision_layer = 4194305
collision_mask = 1169
physics_material_override = SubResource("1")
gravity_scale = 2.0
contact_monitor = true
max_contacts_reported = 10
angular_damp = 80.0
script = ExtResource("1")
forward_bullet_scene = ExtResource("33")
atom_texture = ExtResource("2")
cpu_ship_texture = ExtResource("20")

[node name="Intro" parent="." instance=ExtResource("22")]
order = 1

[node name="Bumper" parent="." instance=ExtResource("23")]

[node name="Collector" parent="." instance=ExtResource("24")]

[node name="Tracked" parent="." instance=ExtResource("36")]

[node name="Target" parent="." instance=ExtResource("11")]

[node name="TimeFreezable" parent="." instance=ExtResource("46")]

[node name="Ammo" parent="." instance=ExtResource("37")]
unique_name_in_owner = true

[node name="IceAutoTrail" parent="." instance=ExtResource("29")]
z_index = -16
z_as_relative = false
starting_color = Color(0, 0.835294, 1, 0.392157)
ending_color = Color(0, 0.811765, 1, 0.156863)
length = 120
width = 10
persistence = 2
auto_create_on_enter = false
disappear_speed = 1.0

[node name="Cargo" parent="." instance=ExtResource("28")]

[node name="WeaponSlot" parent="." instance=ExtResource("32")]
visible = false

[node name="Magnet" parent="." instance=ExtResource("27")]

[node name="Drill" parent="." instance=ExtResource("31")]

[node name="Sword" parent="." instance=ExtResource("25")]

[node name="RightScythe" parent="." instance=ExtResource("26")]

[node name="LeftScythe" parent="." instance=ExtResource("26")]
scale = Vector2(1, -1)

[node name="FwShotCompensationZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FwShotCompensationZone"]
polygon = PackedVector2Array(1000, -300, 1000, 300, 0, 150, 0, -150)

[node name="Shields" parent="." instance=ExtResource("30")]

[node name="Entity" type="Node" parent="Shields"]
script = ExtResource("4")

[node name="LoadedShot" type="Sprite2D" parent="."]
position = Vector2(-150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="PlayerInfo" parent="." instance=ExtResource("16")]

[node name="Graphics" type="Marker2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.25, 1.25)
script = SubResource("11")
ship_texture = ExtResource("41")

[node name="ChargeBar" type="Node2D" parent="Graphics"]
z_index = 100
z_as_relative = false
position = Vector2(-92, 0)
scale = Vector2(2, 2)

[node name="Crosshair" type="Line2D" parent="Graphics/ChargeBar"]
position = Vector2(-68, 0)
points = PackedVector2Array(0, 0, -32, 0)
width = 4.0

[node name="ChargeBackground" type="Line2D" parent="Graphics/ChargeBar"]
position = Vector2(-22, 0)
points = PackedVector2Array(0, 0, 0, 0)
width = 20.0
default_color = Color(0, 0, 0, 1)
texture_mode = 221806672
begin_cap_mode = 1
end_cap_mode = 1

[node name="ChargeAxis" type="Line2D" parent="Graphics/ChargeBar"]
visible = false
position = Vector2(-22, 0)
points = PackedVector2Array(0, 0, -78.4, 0)
width = 2.0
texture_mode = 221806672

[node name="Charge" type="Line2D" parent="Graphics/ChargeBar"]
visible = false
self_modulate = Color(1, 1, 0, 1)
position = Vector2(-22, 0)
points = PackedVector2Array(0, 0, 0, 0)
texture_mode = 221806672

[node name="ArrowTip" type="Sprite2D" parent="Graphics/ChargeBar/Charge"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 0, 1)
show_behind_parent = true
position = Vector2(22, 0)
rotation = -1.5708
scale = Vector2(0.6, 0.6)
texture = ExtResource("34")
offset = Vector2(0, -64)

[node name="BombPreview" type="Node2D" parent="Graphics/ChargeBar"]
unique_name_in_owner = true

[node name="BombType" type="Sprite2D" parent="Graphics/ChargeBar/BombPreview"]
self_modulate = Color(1, 1, 1, 0.5)
scale = Vector2(0.7, 0.7)

[node name="Symbol" type="Sprite2D" parent="Graphics/ChargeBar/BombPreview"]
self_modulate = Color(1, 1, 1, 0.843137)
scale = Vector2(0.35, 0.35)

[node name="ShootingLine" parent="Graphics/ChargeBar/BombPreview" instance=ExtResource("42")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.494118, 0, 1)
position = Vector2(-130.4, 0)
enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ofvoh")
}

[node name="Tween" type="Tween" parent="Graphics"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]
material = SubResource("10")
scale = Vector2(5, 5)
texture = ExtResource("41")

[node name="SpriteOverlay" type="Sprite2D" parent="Graphics"]
modulate = Color(1, 1, 1, 0)
material = SubResource("14")
texture = ExtResource("41")

[node name="Shadow" parent="Graphics" instance=ExtResource("40")]
sprite = NodePath("../Sprite2D")

[node name="NearArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 900

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearArea"]
shape = SubResource("3")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4101
input_pickable = false

[node name="Entity" type="Node" parent="DetectionArea"]
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("4")

[node name="charging" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX_effect"

[node name="RisingDiamondCollectSFX" parent="." instance=ExtResource("21")]
stream = ExtResource("35")
volume_db = 7.0
bus = &"SFX_effect"

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"
script = ExtResource("44")
streams = Array[AudioStream]([ExtResource("45")])
randomize_pitch = true
pitch_min = 0.2
pitch_max = 0.4

[node name="Entity2D" type="Node2D" parent="."]
script = ExtResource("4")

[node name="Stunning" type="Node" parent="Entity2D"]
script = ExtResource("7")

[node name="Flowing" type="Node" parent="Entity2D"]
script = ExtResource("9")

[node name="Cargo" type="Node" parent="Entity2D"]
script = ExtResource("10")

[node name="Conqueror" type="Node" parent="Entity2D"]
script = ExtResource("12")

[node name="Royal" type="Node" parent="Entity2D"]
script = ExtResource("7")

[node name="Thrusters" type="Node" parent="Entity2D"]
script = ExtResource("13")

[node name="Teleportable" type="Node" parent="Entity2D"]
script = ExtResource("14")

[node name="Phasing" type="Node" parent="Entity2D"]
script = ExtResource("7")

[node name="Dashing" type="Node" parent="Entity2D"]
script = ExtResource("7")

[node name="Debug" parent="." instance=ExtResource("15")]

[node name="TargetDest" type="Marker2D" parent="."]
script = ExtResource("17")

[node name="Strategic" parent="TargetDest" instance=ExtResource("18")]

[node name="DebugSprite" type="Sprite2D" parent="TargetDest"]
visible = false
modulate = Color(1, 1, 1, 0.309804)
texture = ExtResource("20")

[node name="Tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = null

[node name="DashFxTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashParticles" type="GPUParticles2D" parent="."]
modulate = Color(3, 3, 3, 1)
material = SubResource("6")
position = Vector2(-56, 0)
emitting = false
amount = 80
process_material = SubResource("9")
texture = ExtResource("19")

[node name="AutoTrail" parent="." instance=ExtResource("29")]
width = 140

[node name="FlameAutoTrail" parent="." instance=ExtResource("29")]
position = Vector2(-54, 0)
starting_color = Color(1, 1, 1, 1)
length = 10
width = 140
texture = ExtResource("43")
texture_mode = 2

[node name="InnerFlameAutoTrail" parent="." instance=ExtResource("29")]
position = Vector2(-66, 0)
starting_color = Color(1, 1, 1, 0.588235)
length = 10
width = 40
texture = ExtResource("43")
texture_mode = 2

[node name="DamagePreventionTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Ship_body_entered"]
[connection signal="area_entered" from="NearArea" to="." method="_on_NearArea_area_entered"]
[connection signal="area_exited" from="NearArea" to="." method="_on_NearArea_area_exited"]
[connection signal="body_entered" from="NearArea" to="." method="_on_NearArea_body_entered"]
[connection signal="body_exited" from="NearArea" to="." method="_on_NearArea_body_exited"]
[connection signal="disabled" from="Entity2D/Royal" to="PlayerInfo" method="_on_Royal_disabled"]
[connection signal="enabled" from="Entity2D/Royal" to="PlayerInfo" method="_on_Royal_enabled"]
[connection signal="disabled" from="Entity2D/Thrusters" to="." method="_on_Thrusters_disabled"]
[connection signal="enabled" from="Entity2D/Thrusters" to="." method="_on_Thrusters_enabled"]
[connection signal="disabled" from="Entity2D/Dashing" to="." method="_on_Dashing_disabled"]
[connection signal="enabled" from="Entity2D/Dashing" to="." method="_on_Dashing_enabled"]
